--- a/usr/src/lib/libzonecfg/dtd/zonecfg.dtd.1
+++ b/usr/src/lib/libzonecfg/dtd/zonecfg.dtd.1
@@ -52,16 +52,16 @@
 <!ATTLIST device	match		CDATA #REQUIRED>
 
 <!--
-	The deleted-device element denotes a used-to-be device element.
-	We keep track of device elements which the user has deleted or
-	modified, and make an attempt to cleanse /dev of associated entries
-	at next zone boot.
+	Historically, the deleted-device element denoted a used-to-be
+	device element.  This was used to keep track of device elements
+	deleted or modified by the user, and to cleanse /dev of such
+	entries at next zone boot.
 
-	The 'devnames' project will ultimately obsolete the need for this
-	functionality, but this element MUST remain in perpetuity, since
-	it is possible that zones crossing from pre-devnames to post-devnames
-	bits could carry a deleted-device element, and would therefore fail
-	XML validation if this were removed
+	With the ability to now configure devices dynamically, this
+	requirement no longer exists, but this element MUST remain in
+	perpetuity, since it is possible that an upgraded zone could
+	carry a deleted-device element, and would therefore fail XML
+	validation if removed
 -->
 <!ELEMENT deleted-device	EMPTY>
 
