--- a/usr/src/tools/scripts/nightly.1
+++ b/usr/src/tools/scripts/nightly.1
@@ -57,7 +57,7 @@ perform a "make clobber" to clean up old binaries
 .TP
 bringover from the identified parent gate/clone
 .TP
-perform non-DEBUG and DEBUG builds
+perform non-debug and debug builds
 .TP
 list proto area files and compare with previous list
 .TP
@@ -185,13 +185,10 @@ Do not report warnings (for freeware gate ONLY)
 .TP
 .B \-w
 Report which proto area objects differ between this and the last build.
-See wsdiff(1) for details. Note that unless $SINGLE_PROTO is set to "no",
-the proto areas used for comparison are the last ones constructed as part
-of the build. As an example, if both a non-DEBUG and DEBUG build are
-performed (in that order), then the DEBUG proto area will be used for
-comparison (which might not be what you want).  If $SINGLE_PROTO is set to
-"no", then wsdiff will report on the non-DEBUG proto area as well as on the
-DEBUG proto area.
+See wsdiff(1) for details. Note that the proto areas used for comparison
+are the last ones constructed as part of the build. As an example, if both
+a non-debug and debug build are performed (in that order), then the debug
+proto area will be used for comparison (which might not be what you want).
 .LP
 .B Groups of options
 .TP 10
@@ -211,12 +208,8 @@ Default group of options for building a release (-mp)
 set the build version string to VERS, overriding VERSION
 .TP
 .B \-X
-Copies the proto area and packages from the IHV and IHV-bin gates into the
-nightly proto and package areas.  This is only available on i386.  See
-.B REALMODE ENVIRONMENT VARIABLES
-and
-.B BUILDING THE IHV WORKSPACE
-below.
+do IA32 realmode builds (requires access to a
+properly-configured NT build machine and root permissions)
 .TP
 .B \-S E | D | H
 Build the Export, Domestic, or Hybrid source product. Only Export and
@@ -351,7 +344,7 @@ set this for you.
 .RE
 .B RELEASE_BUILD
 .RS 5
-Define this to build a release with a non-DEBUG kernel. 
+Define this to build a release with a non-debug kernel. 
 Generally, let
 .I nightly
 set this for you based on its options.
@@ -466,19 +459,18 @@ available, although these are not stable, and should be checked before use.
 The command output will be appended to the mail message and log file.
 .RE
 .LP
-.B SINGLE_PROTO
-.RS 5
-By default, the DEBUG build will overwrite the non-DEBUG proto area, if
-both builds are performed.  If SINGLE_PROTO is set to "no", then the
-non-DEBUG proto area from the build will be preserved adjacent to the DEBUG
-proto area with the "-nd" tag appended to the name.
-.RE
-.LP
 .SH REALMODE ENVIRONMENT VARIABLES
 .LP
 The following environment variables referenced by
 .I nightly
-are only required when the -X option is used.
+are only required on IA32 realmode builds, enabled with option -X.
+.LP
+.B NTSERVER
+.RS 5
+The host name of the NT server to be used for realmode builds.
+It is unlikely there will be any public NT machines available,
+so you'll most likely need to set one of these up for your project's
+use if you need to build realmode.
 .LP
 .RE
 .B IA32_IHV_WS
@@ -495,20 +487,55 @@ The IHV workspace must be fully built before starting the ON realmode build.
 .RE
 .B IA32_IHV_PKGS
 .RS 5
-Reference to the IHV workspace packages.  If this is empty or the directory
-is non-existent, then nightly will skip copying the packages.
+Reference to the IHV workspace packages.
+The IHV workspace must be fully built before starting the ON realmode build.
 .LP
 .RE
 .B IA32_IHV_BINARY_PKGS
 .RS 5
-Reference to binary-only IHV packages.  If this is empty or the directory
-is non-existent, then nightly will skip copying the packages.
+Reference to binary-only IHV packages.  These packages must
+be available before starting the ON realmode build.
+.LP
+.RE
+.B DCB_ROOT
+.RS 5
+The DCB proto area containing all the individual realmode
+drivers used to construct the boot floppy.
+.LP
+.RE
+.B BOOTFLOPPY_ROOT
+.RS 5
+Boot floppy proto area containing the actual boot floppy image
+resulting from the build.
 .LP
 .RE
 .B SPARC_RM_PKGARCHIVE
 .RS 5
 Destination for sparc realmode package SUNWrmodu.
 Yes, this sparc package really is built on x86.
+.LP
+.RE
+.B REF_PROTO_LIST_DCB
+.RS 5
+This is the reference DCB proto area to compare against
+the results of your build.  This makes it easy to see
+the changes introduced from one build to the next.
+.LP
+.RE
+.B REF_PROTO_LIST_BOOTFLOPPY
+.RS 5
+This is the reference BootFloppy proto area to compare against
+the results of your build.  This makes it easy to see
+the changes introduced from one build to the next.
+.SH REALMODE BUILDS
+.LP
+Since realmode builds are always non-DEBUG, there's no difference
+between the DEBUG & non-DEBUG versions of the realmode packages.
+All the realmode and IHV packages are installed by
+.I nightly
+in both the nightly and nightly-nd
+packages so both sets of packages are complete.
+This means both the IHV and ON builds must include non-DEBUG.
 .SH BUILDING THE IHV WORKSPACE
 .LP
 The IHV workspace can be built with
@@ -519,8 +546,11 @@ The recommended options are:
 NIGHTLY_OPTIONS="-pmWN"
 .RE
 .LP
-None of the realmode environment variables needed for ON realmode builds
-are required to build the IHV workspace.
+The NTSERVER variable must be set to provide the NT server
+to be used for the realmode part of the IHV build.  None
+of the other realmode environment variables needed for
+ON realmode builds are required to build the IHV
+workspace.
 .SH EXAMPLES
 .LP
 Start with the example file in usr/src/tools/env/developer.sh
