--- a/usr/src/tools/scripts/bldenv.1
+++ b/usr/src/tools/scripts/bldenv.1
@@ -1,10 +1,9 @@
 .\" ident	"%Z%%M%	%I%	%E% SMI"
 .\" " CDDL HEADER START
 .\" "
-.\" " The contents of this file are subject to the terms of the
-.\" " Common Development and Distribution License, Version 1.0 only
-.\" " (the "License").  You may not use this file except in compliance
-.\" " with the License.
+.\" The contents of this file are subject to the terms of the
+.\" Common Development and Distribution License (the "License").
+.\" You may not use this file except in compliance with the License.
 .\" "
 .\" " You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 .\" " or http://www.opensolaris.org/os/licensing.
@@ -19,15 +18,15 @@
 .\" "
 .\" " CDDL HEADER END
 .\" "
-.\" "Copyright 2005 Sun Microsystems, Inc."
+.\" "Copyright 2006 Sun Microsystems, Inc."
 .\" "All rights reserved"
 .\" "Use is subject to license terms."
-.TH bldenv 1 "04 Jan 2005"
+.TH bldenv 1 "19 Sep 2006"
 .SH NAME
 .I bldenv
 \- spawn shell for interactive incremental OS-Net consolidation builds
 .SH SYNOPSIS
-\fBbldenv [-fdt] [-S E|C|D] <env_file> [command]\fP
+\fBbldenv [-fdt] [-S E|H|D|O] <env_file> [command]\fP
 .LP
 .SH DESCRIPTION
 .IX "OS-Net build tools" "bldenv" "" "\fBbldenv\fP"
@@ -73,11 +72,14 @@ set up environment to use the tools in usr/src/tools
 .B \-S E
 build the exportable source variant of the source product
 .TP
-.B \-S C
-build the crypt source variant of the source product
-.TP
 .B \-S D
 build the domestic source (exportable + crypt) variant of the source product
+.TP
+.B \-S H
+build hybrid source (binaries + deleted source)
+.TP
+.B \-S O
+simulate an OpenSolaris (open source only) build
 .LP
 .SH EXAMPLES
 .LP
