PSARC 2006/496 Improved Zones/RM Integration PSARC 2006/598 Swap resource control; locked memory RM improvements PSARC 2006/660 rcapadm zone option 4754856 *prstat* prstat -atJTZ should count shared segments only once 4970603 RFE: should be able to persistently specify global zone's cpu shares 5026227 RFE: ability to rcap zones from global zone 5103071 RFE: local zones can run the global zone out of swap 6222025 RFE: simplify rctl syntax and improve cpu-shares/FSS interaction 6420985 rcapstat is broken on amd64 6421202 RFE: simplify and improve zones/pool integration 6442252 zonecfg's "unset" syntax is not documented and confusing 6490516 schedctl pages should not reserve swap 6490938 setproject can bind to the wrong pool 6498635 zone attach failure leaves zone in installed state 6500877 tmpfs syslogs incorrect path when non-global zone tmpfs mounts become full

--- a/usr/src/lib/libzonecfg/dtd/zonecfg.dtd.1
+++ b/usr/src/lib/libzonecfg/dtd/zonecfg.dtd.1
@@ -111,7 +111,27 @@
 			mode		CDATA #REQUIRED
 			acl		CDATA #REQUIRED>
 
-<!ELEMENT zone		(filesystem | inherited-pkg-dir | network | device | deleted-device | rctl | attr | dataset | package | patch | dev-perm)*>
+<!--
+	The tmp_pool element is separate from the pset element so that
+	we can track the importance value at the pool level, where it
+	belongs, instead of at the pset level.  Once we have msets this
+	will be important since tmp psets and tmp msets will share a common
+	pool-level importance.
+-->
+<!ELEMENT tmp_pool	EMPTY>
+
+<!ATTLIST tmp_pool	importance	CDATA #REQUIRED>
+
+<!ELEMENT pset		EMPTY>
+
+<!ATTLIST pset		ncpu_min	CDATA #REQUIRED
+			ncpu_max	CDATA #REQUIRED>
+
+<!ELEMENT mcap		EMPTY>
+
+<!ATTLIST mcap		physcap		CDATA #REQUIRED>
+
+<!ELEMENT zone		(filesystem | inherited-pkg-dir | network | device | deleted-device | rctl | attr | dataset | package | patch | dev-perm | tmp_pool | pset | mcap)*>
 
 <!ATTLIST zone		name		CDATA #REQUIRED
 			zonepath	CDATA #REQUIRED
@@ -120,4 +140,5 @@
 			limitpriv	CDATA ""
 			bootargs	CDATA ""
 			brand		CDATA ""
+			scheduling-class	CDATA ""
 			version		NMTOKEN #FIXED '1'>
