4921786 webrev -l should be able to use a different workspace parent 4964018 webrev incorrectly renders diffs with tabs into html 5070795 webrev should allow easily adding info to webrev page 5071773 webrev should not have a hard-coded dependency on /ws/on10-gate 5095843 webrev should generate "no-cache" html 6208689 webrev -l is not properly using the CODEMGR_PARENT environment variable 6219890 webrev could be improved to handle successive reviews better 6297788 webrev should use paths in titles of New and Old pages 6355710 Ease reading of BW prints from webrev sdiffs 6465388 webrev should put delta comments at the top of each file 6465389 webrev emits really crappy HTML 6465393 webrev should include a patch representation of the review 6465395 webrev should include some keybindings for frames mode 6465407 webrev should emit a PDF version of the review 6466274 webrev should have command line options for common environment variables 6466279 webrev should have an "opensolaris" mode

--- a/usr/src/tools/scripts/wx.1
+++ b/usr/src/tools/scripts/wx.1
@@ -648,7 +648,7 @@ active entries if it finds they have been renamed in the workspace.
 print current version of this program
 
 .TP
-.B webrev
+.B webrev [webrev-options]
 Generates a webrev for active and renamed/deleted files.
 Note, uses comments in the active list.  This is the
 preferred way of reviewing code.
