--- a/usr/src/tools/scripts/webrev.1
+++ b/usr/src/tools/scripts/webrev.1
@@ -1,13 +1,12 @@
 .\" "
-.\" " Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+.\" " Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 .\" " Use is subject to license terms.
 .\" "
 .\" " CDDL HEADER START
 .\" "
 .\" " The contents of this file are subject to the terms of the
-.\" " Common Development and Distribution License, Version 1.0 only
-.\" " (the "License").  You may not use this file except in compliance
-.\" " with the License.
+.\" " Common Development and Distribution License (the "License").
+.\" " You may not use this file except in compliance with the License.
 .\" "
 .\" " You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 .\" " or http://www.opensolaris.org/os/licensing.
@@ -23,104 +22,241 @@
 .\" " CDDL HEADER END
 .\" "
 .\" ident	"%Z%%M%	%I%	%E% SMI"
-.TH webrev 1 "1 January 2005"
+.TH webrev 1 "1 December 2006"
 .SH NAME
 webrev \- Generate HTML codereview materials
 .SH SYNOPSIS
-webrev <file.list> | [-] | [-w [<wx file>]] | [-l [-f flp]] 
+.B webrev
+[
+.I common-options
+]
+
+.B webrev
+[
+.I common-options
+]
+.I file-list-file
+|
+.I -
+
+.B webrev
+[
+.I common-options
+]
+.B -w
+.I wx-file
+
+.B webrev 
+[
+.I common-options
+]
+.B -l
+.I arguments to 'putback'
+
+See OPTIONS for common-options.
 
 .SH DESCRIPTION
-webrev takes a file list and a workspace
-and builds a set of HTML files suitable for doing
-a code review of source changes via a web page.
+.B webrev
+builds a set of HTML files suitable for performing code review of
+source changes in a web browser.  At its most basic, usage is:
+.nf
+        $ webrev
+.fi
 
-Basic usage is:
+In which case \fBwebrev\fR attempts to figure out the list of files
+for review (note that when using Teamware \fBputback\fR, this may take
+a long time; see the -l option).  If that fails, or if more control
+over the set of files is needed, a \fIfile list\fR may be specified.
+\fBwebrev\fR also attempts to deduce a
+.I basis for comparison
+(interchangeably called the \fIparent\fR, but see SCM INTERACTIONS below).
+A basis for comparison is needed in order to determine the differences
+introduced by the code changes under review.
 
-	$ webrev file.list
+By default, \fBwebrev\fR creates a \fIwebrev\fR directory in the
+workspace directory that contains the generated HTML files, a generated
+PDF review, and a patch representing the changes.  It also places a
+copy of the file list in that directory, and of both the old and new
+raw files in the \fB$webrev_root/raw_files\fR directory.
+To output the webrev somewhere other than the default location, use the
+\fI-o <outdir>\fR option, or set the \fBWDIR\fR environment variable.
+For example:
+.nf
+        $ webrev -o ~/public_html/myreview/
+.fi
+.PP
+In the index file, each file is listed on a line with a link to the
+relevant review materials.  Comments for each delta will be included
+automatically.  Bug numbers (any sequence of 5 or more digits) and ARC
+cases (ARC name followed by year/number, e.g. PSARC/2003/436) in the
+comment will become hyperlinks in the associated web interface.
 
-where 'file.list' is a file containing the pathnames of all the files
-you wish to include in the review.  webrev creates a "webrev" directory
-in the workspace directory that contains all the generated HTML files.
-It also stashes a copy of the file list in that directory.
+As a review aid, content may be added to the \fIindex\fR file in two ways.
+First, the author may manually edit the file (for example by including
+text that explains the changes in front of the links for each file).
+Note that if webrev is run again, manual edits will be lost.  Second,
+if a file named \fIwebrev-info\fR is present at the root of the workspace,
+it will be automatically included in the \fIindex\fR file.  To include a
+different file, see the \fI-i\fR option.
 
-1) If you use the -l option, "webrev -l", webrev extracts the file list
-from the output of "putback -n" that will include any files updated,
-created, or currently checked out.  This is the easiest way to use
-webrev.  If you use the "-l" option to generate the file list then skip
-to step (4).  Note: if the workspace is large (e.g. all of Solaris
-usr/src then this might take a while. You can run "webrev -l -f flp" to
-have webrev extract a file list from the output of "putback -n -f
-flp".  The file list created by "webrev -l" is stashed in the
-webrev directory as "file.list".
-
-If you would like more control over the file list then
-create a file containing a list of all the files to
-be included in your review with paths relative to your
-workspace directory, e.g.
-
+For each file in the file list, \fBwebrev\fR compares the file with the
+version in the basis for comparison (i.e. the parent workspace) and
+generates a variety of HTML renderings of the differences between
+the two files; which of these renderings to use is largely a matter
+of personal preference.  Additional, webrev emits a patch, the old
+and new versions of the file, and a "raw" copy of the file which is
+suitable for download.  For files which express differences, source
+is formatted according to the following color coding:
 .IP
-usr/src/uts/common/fs/nfs/nfs_subr.c
+.nf
+     unchanged : black
+       removed : brown
+       changed : blue
+           new : bold blue
+.fi
+
+.SH SCM INTERACTIONS
+.PP
+.B webrev
+attempts to interact with the source code management system currently in use.  
+.B webrev
+needs to be able locate the code under review (i.e. the workspace) and
+the basis for comparison (i.e. the parent).  The method for doing so
+depends upon the SCM in use, which
+.B webrev
+will also attempt to auto-discover.  In all cases,
+.B webrev
+must either discover the list of files which have changed, or else this list
+must be manually specified, either in "webrev file list" format or in "wx"
+format.  See FILE LIST for more details.
+
+.SS Teamware
+In the case of Teamware, if the user has already activated the workspace
+with the
+.BR ws (1)
+command or set the
+.B CODEMGR_WS
+environment variable, then
+.B webrev
+will use the
+.B CODEMGR_WS
+environment variable.  To manually set the basis for
+comparison, use the -p option, or specify the
+.B CODEMGR_PARENT
+variable in the file list.
+
+To direct \fBwebrev\fR to determine the file list from
+.BR putback (1),
+use the -l option.  (Note that \fBwebrev\fR may also elect to use
+\fBputback\fR if it cannot determine the file list from
+.BR wx (1)).
+The -l option indicates that subsequent arguments should be
+treated as arguments to
+.BR putback (1).
+This can be used to prune the set of files which putback examines,
+or to reference a teamware flp (file list program).
+
+.SH OPTIONS
+.TP 10
+.BI "-w " wx-file
+Extract the file list from the wx "active" file specified.  'wx' uses
+this mode when invoking webrev.  The list is assumed to be in the
+format expected by the \fIwx\fR package.  See FILE LIST, below.
+.TP 10
+.BI "-l " putback-args
+Extract the file list from the output of 
+.I putback -n.
+Any arguments supplied will be passed to
+.BR putback (1).
+See SCM INTERACTIONS.  For more information about file
+lists, see FILE LIST.  This argument should appear last.
+.TP 10
+.B -O
+Enable \fIOpenSolaris\fR mode: bug links are generated relative to
+\fIbugs.opensolaris.org\fR, SAC links are generated relative to
+\fIwww.opensolaris.org\fR, and sources which appear in \fIusr/closed\fR
+are automatically elided from the review.
+.TP 10
+.BI "-i " include-file
+Include the specified file into the index.html file which is generated
+as part of the webrev.  This allows a snippet of XHTML to be added by
+the webrev author. User content is contained by a <div> tag and
+the markup should validate as XHTML 1.0 Transitional.
+.TP 10
+.BI "-o " output-dir
+Place output from running the script in the directory specified.  If
+specified, this option takes precedence over the WDIR environment variable.
+.TP 10
+.BI "-p " basis-of-comparison
+Specify a basis of comparison meaningful for the SCM currently in use.
+See SCM INTERACTIONS and INCREMENTAL REVIEWS.
+
+.SH FILE LIST
+.PP
+.B Webrev
+needs to be told or to discover which files have changed in a
+given workspace.  By default,
+.B webrev
+will attempt to autodetect the
+list of changed files by first consulting
+.BR wx(1).
+If this information is not available, webrev tries to consult the SCM (Source
+Code Manager) currently in use.  If that fails, the user must intervene by
+specifying either a file list or additional options specific to the SCM in use.
+
+.SS Webrev Format
+A webrev formatted file list contains a list of all the files to
+be included in the review with paths relative to the workspace
+directory, e.g.
+.IP
+.nf
+\f(CWusr/src/uts/common/fs/nfs/nfs_subr.c
 usr/src/uts/common/fs/nfs/nfs_export.c
 usr/src/cmd/fs.d/nfs/mountd/mountd.c
-.br
-:
-
+.fi
 .PP
 Include the paths of any files added, deleted, or modified.
 You can keep this list of files in the webrev directory
-that webrev creates in your workspace directory
+that webrev creates in the workspace directory
 (CODEMGR_WS).
 
-2) webrev needs to be able locate your workspace and
-its parent.  If you have already activated your workspace
-with the "ws" command then webrev will use the
-CODEMGR_WS environment variable.  If you are not working
-within a workspace activation, then you need to set
-the environment variable within the file list, e.g.
-
+If CODEMGR_WS is not set, it may be specified as an environment variable
+within the file list, e.g.
 .IP
-CODEMGR_WS=/home/brent/myws
-
+.nf
+\f(CWCODEMGR_WS=/home/brent/myws
 usr/src/uts/common/fs/nfs/nfs_subr.c
 usr/src/uts/common/fs/nfs/nfs_export.c
 usr/src/cmd/fs.d/nfs/mountd/mountd.c
-.br
-:
-
+.fi
 .PP
-If you would like to compare against some other workspace
-that is not the parent, then you can set the CODEMGR_PARENT
-environment variable in the file list, e.g.
-
+To compare the workspace against one other than the parent (see also
+the -p option), include a CODEMGR_PARENT line in the file list, like:
 .IP
-CODEMGR_WS=/home/brent/myws
-.br
+.nf
+\f(CWCODEMGR_WS=/home/brent/myws
 CODEMGR_PARENT=/ws/onnv-gate
-
 usr/src/uts/common/fs/nfs/nfs_subr.c
 usr/src/uts/common/fs/nfs/nfs_export.c
 usr/src/cmd/fs.d/nfs/mountd/mountd.c
-.br
-:
-
+.fi
 .PP
-3) Run webrev with the name of the file containing
-the file list as an argument, e.g.
-
-.IP
-$ webrev file.list
-
+Finally, run webrev with the name of the file containing the file list as an
+argument, e.g.
+.nf
+        $ webrev file.list
+.fi
 .PP
-If you supply "-" as the name of the file, then stdin
-will be used.
+If "-" is supplied as the name of the file, then stdin will be used.
 
-If you use the "-w" flag, i.e. "webrev  -w  file.list"
-then webrev will assume the file list is in the format
-expected by the "wx" package: pathname lines alternating
-with SCCS comment lines separated by blank lines, e.g.
-
+.SS wx Format
+If the \fI-w\fR flag is specified then \fBwebrev\fR
+will assume the file list is in the format expected by the "wx" package:
+pathname lines alternating with SCCS comment lines separated by blank
+lines, e.g.
 .IP
-usr/src/uts/common/fs/nfs/nfs_subr.c
+.nf
+\f(CWusr/src/uts/common/fs/nfs/nfs_subr.c
 
 1206578 Fix spelling error in comment
 
@@ -131,104 +267,37 @@ usr/src/uts/common/fs/nfs/nfs_export.c
 usr/src/cmd/fs.d/nfs/mountd/mountd.c
 
 1927634 mountd daemon doesn't handle expletives
+.fi
 
-.PP
-Embedded bug ids and ARC cases will be converted to a URL (see
-below).
-
-4) For each file in the list, webrev will compare it
-with the version in the parent workspace (CODEMGR_PARENT)
-and generate context and side-by-side diffs (sdiffs) as
-HTML files as well as HTML renderings of the old and new
-files with prepended line numbers for easy cross-checking
-with diffs.
-
-The HTML files will have additional formatting to
-color code the source lines:
+.SH INCREMENTAL REVIEWS
+When conducting multiple rounds of code review, it may be desirable to
+generate a webrev which represents the delta between reviews.  In this
+case, set the parent workspace to the path to the old webrev:
 
 .IP
-     unchanged : black
-       removed : brown
-       changed : blue
-           new : bold blue
-
- 
-.PP
-5) Webrev will create a directory $CODEMGR_WS/webrev
-and create the HTML files in a hierarchy beneath
-this directory. Links to these HTML files will be
-built into an index.html file in the "webrev" directory.
-If you would like the "webrev" directory to appear
-somewhere other than $CODEMGR_WS, then set the WDIR
-environment variable, e.g.
-
-.IP
-       WDIR=/tmp webrev -l
-
-.PP
-Each file will be listed on a line with a link to its Cdiffs, Udiffs,
-Wdiffs, Sdiffs, Frames, Old, and New versions.  A blank line will be
-inserted between filenames that do not exist within the same directory
-as a grouping aid.  SCCS comments for each delta will be included
-automatically. Bug numbers (any sequence of 5 or more digits) and ARC
-cases (ARC name followed by year/number, e.g. PSARC/2003/436) in the
-comment will become a URL into the associated web interface.
-
-.PP
-As a review aid, you can add value to the index
-file by including text that explains the changes in front
-of the links for each file.  You might also add links
-to the one-pager, project plan, or other documents
-helpful to the reviewer.
-
-6) View the index.html file with your web browser to 
-verify that its what you want your reviewers to see.
-The browser must support HTML tables and colored fonts. 
-The Frames view requires HTML frames and JavaScript, as does Wdiff
-which also requires Dynamic HTML support.
-
-7) Then send an Email invitation to your reviewers including
-the URL to the index.html file in your workspace.  If you
-use an "http:" URL then you can omit the "index.html"
-filename, e.g.
-
-.IP
-To: bob, jane, wendy
-.br
-Subject: Please review fix for bug 1234576
-
-I'd be grateful if you would review my bugfix.
-All the relevant information can be obtained
-with the following URL:
-
-http://jurassic.eng/home/brent/myws/webrev
-
-Thanks
-.br
-Brent
+.nf
+\f(CW$ webrev -o ~/public_html/myreview-rd2/ \\
+         -p ~/public_html/myreview/
+.fi
 
 .SH ENVIRONMENT VARIABLES
-The following environment variables allow for easy customization of
-webrev.
+The following environment variables allow for customization of \fBwebrev\fR:
 
-.IP
-CDIFFCMD and UDIFFCMD are used when generating Cdiffs and Udiffs
+.PP
+\fBCDIFFCMD\fR and \fBUDIFFCMD\fR are used when generating Cdiffs and Udiffs
 respectively; their default values are "diff -b -C 5" and "diff -b -U
 5".  To generate diffs with more (or less) than 5 lines of context or
 with more (or less) strict whitespace handling, set one or both of
-these variables in your environment accordingly.
+these variables in the user environment accordingly.
 
-WEBREV_FRAMES allows you to disable the creation of framed webrevs
-which are enabled by default.  Framed webrevs provide complete
-side-by-side comparisons utilizing HTML frames with JavaScript to aid
-in moving through the differences similar to filemerge.  To disable
-this feature set WEBREV_FRAMES=no in your environment.
-
-WEBREV_BUGURL may be set to an alternate bug to HTML interface
+\fBWEBREV_BUGURL\fR may be set to an alternate bug-to-HTML interface
 (providing the BUG number can be appended to the URL).  The default
 URL is "http://monaco.sfbay.sun.com/detail.jsp?cr=".
 
-WDIFF specifies the command used to generate Wdiffs. Wdiff generates a
+\fBWDIR\fR sets the output directory.  It is functionally equivalent to
+the \fI-o\fR option.
+
+\fBWDIFF\fR specifies the command used to generate Wdiffs. Wdiff generates a
 full unified context listing with line numbers where unchanged
 sections of code may be expanded and collapsed.  It also provides a
 "split" feature that shows the same file in two HTML frames one above the
@@ -245,5 +314,6 @@ Pedro Rubio and Bill Shannon for valuable feedback and insight in
 building webrev.
 
 Have fun!
+.br
 		Brent Callaghan  11/28/96
 
